<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rate_us_top_block"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_dialog"
                app:layout_constraintBottom_toTopOf="@id/rate_us_bottom_block"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/rate_us_close"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/close_icon"
                    android:visibility="gone"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent=".075"
                    app:srcCompat="@drawable/ic_close"
                    app:tint="?attr/colorOnPrimary" />

                <ImageView
                    android:id="@+id/rate_us_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/rate_dialog_margin"
                    android:contentDescription="@string/rate_us_img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent=".2"
                    app:srcCompat="@drawable/happy" />

                <TextView
                    android:id="@+id/rate_us_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="@dimen/rate_dialog_margin"
                    android:gravity="center"
                    android:text="@string/five_star_rate_title"
                    android:textColor="?colorOnPrimary"
                    android:textSize="@dimen/rate_title_text_size"
                    app:layout_constraintBottom_toTopOf="@+id/rate_us_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rate_us_close"
                    app:layout_constraintWidth_percent=".9" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rate_us_bottom_block"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?colorSurface"
                android:paddingTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/rate_us_no_action"
                    style="@style/in_app_rate_us_dialogue_no_action"
                    android:text="@string/five_start_play_store_negative"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="h,7:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/rate_us_action"
                    style="@style/in_app_rate_us_dialogue_action_button"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/five_star_play_store_positive"
                    app:layout_constraintBottom_toTopOf="@id/rate_us_no_action"
                    app:layout_constraintDimensionRatio="5:1"
                    app:layout_constraintEnd_toEndOf="@+id/rate_us_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/rate_us_text" />


                <TextView
                    android:id="@+id/rate_us_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/five_star_play_store"
                    android:textSize="@dimen/rate_button_text_size"
                    app:layout_constraintBottom_toTopOf="@+id/rate_us_action"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent=".85" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>